test/corpus/scenario
================================================================================
Just a body
================================================================================

foo

--------------------------------------------------------------------------------

(document
  (body))

================================================================================
Daily note
================================================================================

# Goals
Get things done

# Tasks
- Chores
  - Trash

# Notes
Pretty hot out

## Log
* 12:00 PM
  * did a thing

--------------------------------------------------------------------------------

(document
  (section
    (section_header)
    (body))
  (section
    (section_header)
    (item
      (marker_task_pending)
      (content)
      (item
        (marker_task_pending)
        (content))))
  (section
    (section_header)
    (body)
    (section
      (section_header)
      (item
        (marker_property_info)
        (content)
        (item
          (marker_property_info)
          (content))))))
